--- a/ignored/.htaccess
+++ b/ignored/.htaccess
@@ -2,3 +2,8 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.php [NC,L]
+
+
+# Errors Handaleing
+php_flag display_startup_errors on
+php_flag display_errors on
